turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:50: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    		rule(0)(0) = (1,RIGHT,0)
                             ^Turmite:51: error: type mismatch;
 found   : (Int, Int, Int)
 required: Array[Int]
    		rule(0)(1) = (1,RIGHT,1)
                             ^Turmite:52: error: not found: value NNOTURN
    		rule(1)(0) = (0,NNOTURN,0)
                                ^Turmite:53: error: not found: value NNOTURN
    		rule(1)(1) = (0,NNOTURN,1)
                                ^